--- a/FoxPro/appsettings.json
+++ b/FoxPro/appsettings.json
@@ -1,9 +1,20 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-N4U22H1Q; Database=FoxProDemos; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate=True"
+  },
+
+  "JWT": {
+    "ValidAudience": "abcdefghija",
+    "ValidIssuer": "abcdem",
+    "Secret": "This is my Secret Key this is my secret key",
+    "TokenValidityInHours": 3,
+    "RefreshTokenValidityInHours": 10
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
