--- a/FoxPro/appsettings.json
+++ b/FoxPro/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-N4U22H1Q; Database=FoxProDemos; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate=True"
+    "DefaultConnection": "Server=LAPTOP-N4U22H1Q; Database=FoxProDemo; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate=True"
   },
 
   "JWT": {
